--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "url": "https://github.com/lennym/i18n-future/issues"
   },
   "homepage": "https://github.com/lennym/i18n-future",
+  "dependencies": {
+    "lodash": "^3.7.0",
+    "glob": "^5.0.5"
+  },
   "devDependencies": {
     "chai": "^2.3.0",
     "mocha": "^2.2.4",
@@ -32,8 +36,5 @@
     "sinon-chai": "^2.7.0",
     "sinon": "^1.14.1",
     "reqres": "^1.2.1"
-  },
-  "dependencies": {
-    "lodash": "^3.7.0"
   }
 }
