Support pre-defining resource sets on initialisation
This means that if a module wishes to load shared resources (such as from an external dependency) then they can easily do so.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "lint": "eslint ./lib",
-    "unit": "mocha --require test/helpers --recursive",
+    "unit": "mocha --require test/helpers --recursive ./test/spec",
     "test": "npm run lint && npm run unit"
   },
   "repository": {
