--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   },
   "homepage": "https://github.com/lennym/i18n-future",
   "dependencies": {
-    "lodash": "^3.7.0",
-    "glob": "^5.0.5"
+    "callsites": "^1.0.0",
+    "findup": "^0.1.5",
+    "glob": "^5.0.5",
+    "lodash": "^3.7.0"
   },
   "devDependencies": {
     "chai": "^2.3.0",
