--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "i18n-future",
+  "name": "hmpo-i18n",
   "version": "1.1.0",
   "description": "i18n for node",
   "main": "index.js",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/lennym/i18n-future.git"
+    "url": "git://github.com/UKHomeOffice/passports-i18n.git"
   },
   "keywords": [
     "i18n"
@@ -22,21 +22,21 @@
   "author": "Leonard Martin <hello@lennym.co.uk>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/lennym/i18n-future/issues"
+    "url": "https://github.com/UKHomeOffice/passports-i18n/issues"
   },
-  "homepage": "https://github.com/lennym/i18n-future",
+  "homepage": "https://github.com/UKHomeOffice/passports-i18n",
   "dependencies": {
-    "callsites": "^1.0.0",
+    "callsites": "^3.0.0",
     "findup": "^0.1.5",
-    "glob": "^5.0.5",
-    "lodash": "^3.7.0"
+    "glob": "^7.1.3",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
-    "chai": "^2.3.0",
-    "mocha": "^2.2.4",
-    "eslint": "^0.20.0",
-    "sinon-chai": "^2.7.0",
-    "sinon": "^1.14.1",
-    "reqres": "^1.2.1"
+    "chai": "^4.2.0",
+    "eslint": "^5.12.1",
+    "mocha": "^5.2.0",
+    "reqres": "^2.1.0",
+    "sinon": "^7.2.3",
+    "sinon-chai": "^3.3.0"
   }
 }
