--- a/package.json
+++ b/package.json
@@ -26,17 +26,18 @@
   },
   "homepage": "https://github.com/UKHomeOffice/passports-i18n",
   "dependencies": {
-    "callsites": "^3.0.0",
+    "async": "^2.6.2",
+    "callsites": "^3.1.0",
     "findup": "^0.1.5",
     "glob": "^7.1.3",
     "lodash": "^4.17.11"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "eslint": "^5.12.1",
-    "mocha": "^5.2.0",
+    "eslint": "^5.16.0",
+    "mocha": "^6.1.4",
     "reqres": "^2.1.0",
-    "sinon": "^7.2.3",
+    "sinon": "^7.3.2",
     "sinon-chai": "^3.3.0"
   }
 }
