--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "async": "^2.6.2",
     "callsites": "^3.1.0",
+    "deep-clone-merge": "^1.4.0",
     "findup": "^0.1.5",
     "glob": "^7.1.3",
     "lodash": "^4.17.11"
