--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "glob": "^7.1.3",
     "lodash": "^4.17.11"
   },
+  "optionalDependencies": {
+    "chokidar": "^2.1.5"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
