--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,6 @@
 language: node_js
 node_js:
-  - '4'
-  - '5'
-  - '6'
-  - '7'
-  - '8'
-  - '9'
+  - 'lts/*'
 notifications:
   email: false
 sudo: false
